--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
-version: 2
+orbs: # declare what orbs we are going to use
+  node: circleci/node@2.0.2 # the node orb provides common node-related configuration
+version: 2.1
 jobs:
   build:
     docker:
@@ -10,6 +12,7 @@ jobs:
           POSTGRES_DB: circle_test
           POSTGRES_USER: myuser
           POSTGRES_PASSWORD: password
+      - image: circleci/node:10.16.3
     steps:  
       - checkout
       - run: sudo apt-get update
@@ -24,10 +27,25 @@ jobs:
           name: Setup the database
           command: psql -h localhost -p 5432 -U myuser -d circle_test -a -f schema.sql
       - run:
-          name: Running tests
+          name: Running api tests
           command: |
             . env/bin/activate
             cd api/
             python3 manage.py test
       - store_artifacts:
           path: test-reports/
+      - run:
+          name: Instal quasar
+          command: |
+            cd client/
+            yarn global add @quasar/cli
+      - run:
+          name: Instal app dependencys
+          command: |
+            cd client/
+            yarn install
+        - run:
+          name: Running app tests
+          command: |
+            cd client/
+            quasar test --unit jest
