--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,3 @@
-orbs: # declare what orbs we are going to use
-  node: circleci/node@2.0.2 # the node orb provides common node-related configuration
 version: 2.1
 jobs:
   build:
@@ -16,7 +14,11 @@ jobs:
     steps:  
       - checkout
       - run: sudo apt-get update
-      - run: sudo apt-get install python-pip python-dev libpq-dev postgresql postgresql-contrib 
+      - run: sudo apt-get install python-pip python-dev libpq-dev postgresql postgresql-contrib
+      - run:
+        command: |
+          curl -o- -L https://yarnpkg.com/install.sh | bash
+          echo 'export PATH="$HOME/.yarn/bin:$HOME/.config/yarn/global/node_modules/.bin:$PATH"' >> $BASH_ENV
       - run:
           command: |
             pip3 install virtualenv
