--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,5 @@
+orbs: # declare what orbs we are going to use
+  node: circleci/node@2.0.2 # the node orb provides common node-related configuration
 version: 2.1
 jobs:
   build:
@@ -10,7 +12,7 @@ jobs:
           POSTGRES_DB: circle_test
           POSTGRES_USER: myuser
           POSTGRES_PASSWORD: password
-      - image: circleci/node:10.16.3
+      - image: "cimg/base:2020.05"
     steps:  
       - checkout
       - run: sudo apt-get update
@@ -36,6 +38,11 @@ jobs:
             python3 manage.py test
       - store_artifacts:
           path: test-reports/
+      - node/install:
+          install-npm: false
+          node-version: 12.16.2
+      - node/install-yarn:
+          version: 1.22.4
       - run:
           name: Instal quasar
           command: |
