--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
           POSTGRES_DB: circle_test
           POSTGRES_USER: myuser
           POSTGRES_PASSWORD: password
+      - image: circleci/node:12.16.2
     steps:  
       - checkout
       - run: sudo apt-get update
@@ -33,9 +34,6 @@ jobs:
             python3 manage.py test
       - store_artifacts:
           path: test-reports/
-      - node/install:
-          install-npm: true
-          node-version: 12.16.2
       - run:
           name: Install app dependencies
           command: |
