--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,3 +51,7 @@ jobs:
           command: |
             cd client/
             npx quasar test --unit jest
+      - run:
+          name: Running app tests
+          command: |
+            npm run test:unit:coverage
