--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,3 +56,13 @@ jobs:
           command: |
             cd client/
             npm run test:unit:coverage
+      - run:
+          name: Setup Code Climate test-reporter
+          command: |
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
+            ./cc-test-reporter before-build
+      - run:
+          name: Send coverage report to Code Climate
+          command:
+            ./cc-test-reporter after-build -t lcov
