--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"See package.json => scripts for available tests.\" && exit 0",
     "test:unit": "jest --updateSnapshot",
     "test:unit:ci": "jest --ci",
-    "test:unit:coverage": "jest --coverage",
+    "test:unit:coverage": "nyc --reporter=lcov --reporter=text jest --coverage",
     "test:unit:watch": "jest --watch",
     "test:unit:watchAll": "jest --watchAll",
     "serve:test:coverage": "quasar serve test/jest/coverage/lcov-report/ --port 8788",
@@ -19,7 +19,10 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
+    "chai": "^4.3.4",
     "core-js": "^3.6.5",
+    "mocha": "^8.3.2",
+    "nyc": "^15.1.0",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
@@ -27,13 +30,13 @@
     "@quasar/quasar-app-extension-testing": "^1.0.3",
     "@quasar/quasar-app-extension-testing-unit-jest": "^2.2.2",
     "babel-eslint": "^10.0.1",
-    "eslint": "^7.21.0",
+    "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-vue": "^7.7.0",
     "eslint-webpack-plugin": "^2.4.0",
     "jest": "^26.6.3",
-    "jest-cli": "^26.6.3",
-    "eslint-plugin-jest": "^24.1.0"
+    "jest-cli": "^26.6.3"
   },
   "browserslist": [
     "last 10 Chrome versions",
