--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,12 +47,14 @@ jobs:
       - run:
           name: Setup Code Climate test-reporter
           command: |
+            cd client/
             curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
             chmod +x ./cc-test-reporter
             ./cc-test-reporter before-build
       - run:
           name: Send coverage report to Code Climate
           command:
+            cd client/
             ./cc-test-reporter after-build -t lcov
       - store_artifacts: # upload test coverage as artifact
           path: .client/coverage/lcov.info
