--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,8 @@ jobs:
           command:
             cd client/
             ./cc-test-reporter after-build -t lcov
+      - store_test_results:
+          path: .client/coverage/lcov-report
       - store_artifacts: # upload test coverage as artifact
           path: .client/coverage/lcov.info
           prefix: tests
