--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,9 +45,9 @@ jobs:
             cd client/
             npm run test:unit:coverage
       - store_test_results:
-          path: client/coverage/lcov-report
+          path: client/test/jest/coverage/lcov-report
       - store_artifacts: # upload test coverage as artifact
-          path: client/coverage/lcov.info
+          path: client/test/jest/coverage/lcov.info
           prefix: tests
       - run:
           name: Setup Code Climate test-reporter
