--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,21 @@
 orbs: # declare what orbs we are going to use
   node: circleci/node@2.0.2 # the node orb provides common node-related configuration
 version: 2.1
+defaults: &defaults
+  working_directory: ~/repo
+  docker:
+    - image: circleci/python:3.6.4
+      environment:
+      DATABASE_URL: postgresql://myuser@localhost:5432/circle_test
+    - image: circleci/postgres:12
+      environment:
+        POSTGRES_DB: circle_test
+        POSTGRES_USER: myuser
+        POSTGRES_PASSWORD: password
 jobs:
   build:
-    docker:
-      - image: circleci/python:3.6.4
-        environment:
-          DATABASE_URL: postgresql://myuser@localhost:5432/circle_test
-      - image: circleci/postgres:12
-        environment:
-          POSTGRES_DB: circle_test
-          POSTGRES_USER: myuser
-          POSTGRES_PASSWORD: password
-    steps:  
+    <<: *defaults
+    steps:
       - run:
           name:  Download cc-test-reporter
           command: |
@@ -23,8 +26,6 @@ jobs:
           root: tmp
           paths:
             - cc-test-reporter
-  
-
   backend:
     steps:
       - checkout
@@ -46,7 +47,6 @@ jobs:
             . env/bin/activate
             cd api/
             python3 manage.py test
-      
   frontend:
    steps:
       - checkout
@@ -68,7 +68,6 @@ jobs:
       - store_artifacts: # upload test coverage as artifact
           path: client/test/jest/coverage/lcov.info
           prefix: tests
-
   upload-coverage:
     steps:
       - run:
@@ -81,9 +80,6 @@ jobs:
           name: Send coverage report to Code Climate
           command:
             ./cc-test-reporter after-build -t lcov
-      
-      
-      
 workflows:
   version: 2
 
