--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,9 @@ jobs:
       - run:
           name:  Download cc-test-reporter
           command: |
-            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-            chmod +x ./cc-test-reporter
-            ./cc-test-reporter before-build
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > /cc-test-reporter
+            chmod +x /cc-test-reporter
+            /cc-test-reporter before-build
   backend:
     <<: *defaults
     steps:
@@ -65,7 +65,7 @@ jobs:
       - run:
           name: add coverage
           command: |
-            ./cc-test-reporter after-build -t lcov
+            /cc-test-reporter after-build -t lcov
       - store_test_results:
           path: client/test/jest/coverage/
       - store_artifacts: # upload test coverage as artifact
