--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,13 @@ jobs:
       - run:
           name:  Download cc-test-reporter
           command: |
-            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > /cc-test-reporter
-            chmod +x /cc-test-reporter
-            /cc-test-reporter before-build
+            mkdir -p tmp/
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./tmp/cc-test-reporter
+            chmod +x ./tmp/cc-test-reporter
+      - persist_to_workspace:
+          root: tmp
+          paths:
+            - cc-test-reporter
   backend:
     <<: *defaults
     steps:
@@ -65,11 +69,22 @@ jobs:
       - run:
           name: add coverage
           command: |
-            /cc-test-reporter after-build -t lcov
+            ./tmp/cc-test-reporter format-coverage -t lcov -o tmp/codeclimate.frontend.json test/jest/coverage/lcov.info
       - store_test_results:
           path: client/test/jest/coverage/
       - store_artifacts: # upload test coverage as artifact
           path: client/test/jest/coverage/lcov.info
+  upload-coverage:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ~/repo/tmp
+      - run:
+          name: Upload coverage results to Code Climate
+          command: |
+            ./tmp/cc-test-reporter sum-coverage tmp/codeclimate.*.json -p 2 -o tmp/codeclimate.total.json
+            ./tmp/cc-test-reporter upload-coverage -i tmp/codeclimate.total.json
+
 workflows:
   version: 2
 
@@ -82,3 +97,7 @@ workflows:
       - frontend: 
           requires: 
              - build
+      - upload-coverage:
+          requires:
+             - backend
+             - frontend
