--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ jobs:
       - run:
           name: add coverage
           command: |
-            ./tmp/cc-test-reporter after-build -t lcov -o client/test/jest/coverage/lcov.info
+            ./tmp/cc-test-reporter after-build -t lcov
       - store_test_results:
           path: client/test/jest/coverage/
       - store_artifacts: # upload test coverage as artifact
