--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,8 +70,7 @@ jobs:
       - run:
           name: add coverage
           command: |
-            cd client/test/jest
-            ./tmp/cc-test-reporter after-build -t lcov
+            ./tmp/cc-test-reporter after-build -t lcov -o tmp/codeclimate.frontend.json client/test/jest/coverage/lcov.info
       - store_test_results:
           path: client/test/jest/coverage/
       - store_artifacts: # upload test coverage as artifact
