--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,13 @@
     "concurrently:dev:jest": "concurrently \"quasar dev\" \"jest --watch\""
   },
   "dependencies": {
+    "@quasar/cli": "^1.1.3",
     "@quasar/extras": "^1.0.0",
+    "add": "^2.0.6",
     "axios": "^0.21.1",
     "chai": "^4.3.4",
     "core-js": "^3.6.5",
+    "global": "^4.4.0",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
