--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ defaults: &defaults
         POSTGRES_PASSWORD: password
 jobs:
   build-backend:
+    <<: *defaults
     steps:
       - checkout
       - run:
@@ -41,6 +42,7 @@ jobs:
             cd api/
             coverage report
   build-frontend:
+    <<: *defaults
     steps:
       - checkout
       - attach_workspace:
