--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,8 @@ jobs:
           command: |
             cd client/
             npm install && npm install --only=dev
+            npm install @quasar/cli
+            npx quasar build
       - run:
           name: frontend-tests
           command: |
