--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
           name: frontend-tests
           command: |
             cd client/
-            quasar test --unit jest
+            npx quasar test --unit jest
       - store_test_results:
           path: client/test/jest/coverage/
       - store_artifacts: # upload test coverage as artifact
