--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
           name: Running app tests
           command: |
             cd client/
-            npm run test:unit:coverage
+            npx quasar test --unit jest --coverage
       - store_test_results:
           path: client/test/jest/coverage/
       - store_artifacts: # upload test coverage as artifact
