--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,11 @@ jobs:
           command: |
             cd client/
             npx quasar test --unit jest
+      - run:
+          name: frontend-coverage
+          command: |
+            cd client/
+            npm run test:unit:coverage
       - store_test_results:
           path: client/test/jest/coverage/
       - store_artifacts: # upload test coverage as artifact
