--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,80 +1,28 @@
 orbs: # declare what orbs we are going to use
   node: circleci/node@2.0.2 # the node orb provides common node-related configuration
 version: 2.1
-defaults: &defaults
-  working_directory: ~/repo
-  docker:
-    - image: circleci/python:3.6.4
-      environment:
-        DATABASE_URL: postgresql://myuser@localhost:5432/circle_test
-    - image: circleci/postgres:12
-      environment:
-        POSTGRES_DB: circle_test
-        POSTGRES_USER: myuser
-        POSTGRES_PASSWORD: password
 jobs:
-  build-backend:
-    <<: *defaults
+  build:
+    working_directory: ~/
     steps:
       - checkout
       - run:
-          name: Install python dependencies
+          name: Install Docker Compose
           command: |
-            sudo apt-get update
-            sudo apt-get install python-pip python-dev libpq-dev postgresql postgresql-contrib 
-            pip3 install virtualenv
-            virtualenv env
-            . env/bin/activate
-            pip install djangorestframework psycopg2 django-cors-headers coverage
+            curl -L https://github.com/docker/compose/releases/download/1.25.3/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
+            chmod +x ~/docker-compose
+            sudo mv ~/docker-compose /usr/local/bin/docker-compose
       - run:
-          name: Setup the database
-          command: psql -h localhost -p 5432 -U myuser -d circle_test -a -f schema.sql
-      - run:
-          name: backend-tests
+          name: Start container and verify it is working
           command: |
-            . env/bin/activate
-            cd api/
-            coverage run --source='.' manage.py test
-      - run:
-          name: test coverage
-          command: |
-            . env/bin/activate
-            cd api/
-            coverage report
-  build-frontend:
-    <<: *defaults
-    steps:
-      - checkout
-      - attach_workspace:
-          at: ~/repo/tmp
-      - node/install:
-          node-version: 12.16.2
-      - run:
-          name: Install app dependencies
-          command: |
-            cd client/
-            npm install && npm install --only=dev
-            npm install @quasar/cli
-            npx quasar build
-      - run:
-          name: frontend-tests
-          command: |
-            cd client/
-            npx quasar test --unit jest
-      - run:
-          name: frontend-coverage
-          command: |
-            cd client/
-            npm run test:unit:coverage
-      - store_test_results:
-          path: client/test/jest/coverage/
-      - store_artifacts: # upload test coverage as artifact
-          path: client/test/jest/coverage/lcov.info
+            set -x
+            docker-compose up -d
+            docker run --network container:contacts \
+              appropriate/curl --retry 10 --retry-delay 1 --retry-connrefused http://localhost:8080/contacts/test
 
 workflows:
   version: 2
 
   commit:
     jobs:
-      - build-backend
-      - build-frontend
+      - build
