--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - checkout
       - run: docker-compose run app yarn quasar test --unit jest
+      - run: docker-compose run api coverage run --source='.' manage.py test
+      - run: docker-compose run api coverage report
   
 workflows:
   version: 2
