--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,80 +1,24 @@
-orbs: # declare what orbs we are going to use
-  node: circleci/node@2.0.2 # the node orb provides common node-related configuration
-version: 2.1
-defaults: &defaults
-  working_directory: ~/repo
-  docker:
-    - image: circleci/python:3.6.4
-      environment:
-        DATABASE_URL: postgresql://myuser@localhost:5432/circle_test
-    - image: circleci/postgres:12
-      environment:
-        POSTGRES_DB: circle_test
-        POSTGRES_USER: myuser
-        POSTGRES_PASSWORD: password
+version: 2 # CircleCI version
 jobs:
-  build-backend:
-    <<: *defaults
+  build:
+    machine: true # Use a Linux VM instead of docker environment
+    working_directory: ~/repo # Default working directory, where your project will be cloned
     steps:
       - checkout
-      - run:
-          name: Install python dependencies
-          command: |
-            sudo apt-get update
-            sudo apt-get install python-pip python-dev libpq-dev postgresql postgresql-contrib 
-            pip3 install virtualenv
-            virtualenv env
-            . env/bin/activate
-            pip install djangorestframework psycopg2 django-cors-headers coverage
-      - run:
-          name: Setup the database
-          command: psql -h localhost -p 5432 -U myuser -d circle_test -a -f schema.sql
-      - run:
-          name: backend-tests
-          command: |
-            . env/bin/activate
-            cd api/
-            coverage run --source='.' manage.py test
-      - run:
-          name: test coverage
-          command: |
-            . env/bin/activate
-            cd api/
-            coverage report
-  build-frontend:
-    <<: *defaults
+      - run: docker-compose up -d
+  test:
+    machine: true # Use a Linux VM instead of docker environment
+    working_directory: ~/repo # Default working directory, where your project will be cloned
     steps:
       - checkout
-      - attach_workspace:
-          at: ~/repo/tmp
-      - node/install:
-          node-version: 12.16.2
-      - run:
-          name: Install app dependencies
-          command: |
-            cd client/
-            npm install && npm install --only=dev
-            npm install @quasar/cli
-            npx quasar build
-      - run:
-          name: frontend-tests
-          command: |
-            cd client/
-            npx quasar test --unit jest
-      - run:
-          name: frontend-coverage
-          command: |
-            cd client/
-            npm run test:unit:coverage
-      - store_test_results:
-          path: client/test/jest/coverage/
-      - store_artifacts: # upload test coverage as artifact
-          path: client/test/jest/coverage/lcov.info
+      - run: docker-compose run app yarn test:unit:coverage
+      - run: docker-compose run api coverage run --source='.' manage.py test
+      - run: docker-compose run api coverage report
 
 workflows:
   version: 2
 
   commit:
     jobs:
-      - build-backend
-      - build-frontend
+      - build
+      - test
